apps/base/speedtest-tracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest-tracker
  labels:
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/part-of: homelab-apps
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
