apps/base/speedtest-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Speedtest Tracker
    gethomepage.dev/description: Speed tests
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: speedtest-tracker.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - speedtest-tracker.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: speedtest-tracker.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
